@@ -48,7 +48,7 @@
 
 #include <mln/topo/is_n_face.hh>
 #include <mln/topo/is_simple_cell.hh>
-#include <mln/topo/detach.hh>
+#include <mln/topo/detach_cell.hh>
 #include <mln/topo/skeleton/breadth_first_thinning.hh>
 
 #include <mln/io/off/load.hh>
@@ -265,7 +265,7 @@ main(int argc, char* argv[])
   bin_ima_t skel =
     mln::topo::skeleton::breadth_first_thinning(surface, nbh,
 						is_simple_p,
-						mln::topo::detach<D, G>,
+						mln::topo::detach_cell<D, G>,
 						constraint_p);
 
   /*---------.
